# pqrs-learn

./: .gitignore  Cargo.toml  README.md  jreleaser.yml
.github/workflows/: release.yml  rust.yml
src/: command.rs  errors.rs  main.rs  utils.rs
src/commands/: cat.rs  head.rs  merge.rs  mod.rs  rowcount.rs  sample.rs  schema.rs  size.rs
tests/: integration.rs
