[package]
name = "pqrs-learn"
version = "0.2.13"
edition = "2021"
authors = ["klion26"]
description = "Apache Parquet command-line tools and utilities"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["cli", "arrow", "parquet"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "1.0.61"
log = "0.4.21"
env_logger = "0.11.3"
parquet = { version = "40.0.0", features = ["cli"] }
arrow = { version = "40.0.0", features = ["chrono-tz"] }
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
tempfile = "3.10.1"
walkdir = "2.5.0"
serde = {  version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
linked_hash_set = "0.1.4"

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
